 Number of horizontal lines is off by one, plus it no longer tries to 'smart' about showing the top bar, plus fix integer rounding errors (   a*b/c  is better than a*(b/c) when using ints! )

This was fixed in kde 3.5 as well in commit revision 608911 so closing bug

BUG: 135381 


svn path=/trunk/KDE/kdebase/workspace/; revision=608912